--- a/views/pages/added.ejs
+++ b/views/pages/added.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <% include ../partials/head %>
   </head>
   <body>
     <p>Vous faites maintenant parti de la promo 7 :) <%= result %></p>
