--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,9 +1,18 @@
 <meta charset="utf-8">
 <title>Apprenants Promo 7 Simplon.co</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <link href="https://fonts.googleapis.com/css?family=Hind|Indie+Flower" rel="stylesheet">
-<link rel="stylesheet" href="/css/header.css">
+
+
 <style>
   body {
     margin: 0;
@@ -20,7 +29,7 @@
     background: black;
     color: white;
     position: absolute;
-    top: 50px;
+    top: 60px;
     right: 50px;
   }
 </style>
