--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,48 @@
-<div class="header-style">
-  <div>
-    <a href="/">
-      <img class="header-img" src="http://mcetv.fr/wp-content/uploads/2015/03/Simplon-recrute-sa-3%C3%A8me-promo-%C3%A0-Montreuil-e1426180721133.png" alt="#">
-    </a>
-  </div>
-  <div class="">
-    <ul>
-      <li>Apprenants</li>
-      <li>Projets</li>
-    </ul>
-  </div>
-</div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Simplon</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <ul class="nav navbar-nav">
+
+        <li class="dropdown">
+
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" href="#" aria-expanded="false">
+            Apprenants
+            <span class="caret"></span>
+          </a>
+
+          <ul class="dropdown-menu">
+            <li><a href="/users">voir les apprenants</a></li>
+            <li><a href="/form">ajouter un apprenant</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" href="#" aria-expanded="false">
+            Projets
+          <span class="caret"></span>
+          </a>
+
+          <ul class="dropdown-menu">
+            <li><a href="/projects">voir les projets</a></li>
+            <li><a href="#">ajouter un projet</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
