ajout de la fonctionnalité permettant de supprimer un profil, et celle permettant de modifier un profil, plus divers retouches du design, et ajout de la fonctionnalité de recherche, mais pas encore totalement au point

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,15 +13,16 @@
   <section>
   <h1>Bienvenue chez la promo 7 !!!</h1>
   <div class="photo-promo">
-    <img src="/img/photo_promo7.jpg" alt="#">
+    <img class="img-responsive center-block" src="/img/photo_promo7.jpg" alt="#">
   </div>
+
   <div class="btns">
-    <div class="btn users">
+    <div class="home-btn apprenants">
       <a href="/users">
           Plus d'info sur les apprennants!!
         </a>
     </div>
-    <div class="btn projects">
+    <div class="home-btn projects">
       <a href="/projects">
           Plus d'info sur les projets!!
         </a>
