--- a/views/usersPages/searchResults.ejs
+++ b/views/usersPages/searchResults.ejs
@@ -11,9 +11,9 @@
     <% include ../partials/header%>
   </header>
 
-  <section class="container" style="text-align: center">
+  <section class="container" style="text-align: center;">
     <div class="jumbotron">
-      <h2>Voici la liste des apprenants : </h2>
+      <h2>Voici le résultat de la recherche : </h2>
     </div>
 
     <ul class="list-group">
@@ -27,7 +27,7 @@
 
     </ul>
   </section>
-  <footer>
+  <footer style="margin-top: 50px;">
     <% include ../partials/footer %>
   </footer>
 </body>
