ajout des fonctionnalités liées aux projets, possibilité de voir tous les projets, ou ceux d'un apprenants spécifique, possibilité d'ajouter un projet à un apprenant, possibilité de supprimé un projet d'un apprenant

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -4,8 +4,16 @@
   font-family: 'Hind', 'sans-serif';
 }
 
+.container-btn {
+  text-align: left;
+}
+
+.btn-width {
+  width: 220px;
+}
+
 .container-img-profil {
-  width: 500px;
+  width: 80%;
   height: 400px;
   margin: auto;
   padding: 5%;
