modif des tables de BDD, ajout de l'url image profil, ajout description pour projet, polissage style et responsive. ps: penser à commit plus souvent

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -10,7 +10,7 @@
   <header>
     <% include ../partials/header%>
   </header>
-  <section>
+  <section style="margin-bottom: 100px;">
   <h1>Bienvenue chez la promo 7 !!!</h1>
   <div class="photo-promo">
     <img class="img-responsive center-block" src="/img/photo_promo7.jpg" alt="#">
