--- a/views/usersPages/form.ejs
+++ b/views/usersPages/form.ejs
@@ -25,13 +25,13 @@
 
       <label for="">Votre pseudo Github : </label>
       <div class="input-group input-group-lg col-xs-12">
-        <input type="text" class="form-control" placeholder="JsKing" aria-describedby="basic-addon3" required maxlength="25">
+        <input type="text" class="form-control" placeholder="JsKing" aria-describedby="basic-addon3" required maxlength="25" name="pseudo" required>
       </div>
 
-      <label for="">Your image URL</label>
+      <label for="">L'URL de votre image : </label>
       <div class="input-group input-group-lg col-xs-12">
         <span class="input-group-addon" id="basic-addon4">url : </span>
-        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon4" placeholder="https://example.com/img/" maxlength="200">
+        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon4" placeholder="https://example.com/img/" maxlength="5000" name="img">
       </div>
       </br>
       <button class="btn btn-default" type="submit">Valider</button>
