--- a/public/css/user.css
+++ b/public/css/user.css
@@ -10,16 +10,10 @@
 
 .btn-width {
   width: 220px;
+  margin-left: 50px;
 }
 
-.container-img-profil {
-  width: 80%;
-  height: 400px;
-  margin: auto;
-  padding: 5%;
-}
-
-.img-profil {
+textarea {
   width: 100%;
-  height: 100%;
+  height: 200px;
 }
