--- a/views/projectsPages/projectUser.ejs
+++ b/views/projectsPages/projectUser.ejs
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <% include ../partials/head %>
-    <link rel="stylesheet" href="/css/project.css">
-  </head>
-  <body>
-    <header>
-      <% include ../partials/header %>
-    </header>
 
-    <section class="container" style="text-align: center">
+<head>
+  <% include ../partials/head %>
+    <link rel="stylesheet" href="/css/project.css">
+</head>
+
+<body>
+  <header>
+    <% include ../partials/header %>
+  </header>
+
+  <section class="container-fluid" style="text-align: center">
+    <form style="text-align: left; margin-left: 70px" action="/users/<%= id %>/projects/<%= idProject %>" method="post" onsubmit="return confirm('Êtes-vous sur de vouloir supprimer ce projet?')">
+      <button type="submit" class="btn btn-danger btn-lg btn-width">
+        supprimer le projet
+      </button>
+    </form>
+
+    <div class="container" style="margin-top: 50px">
       <div class="jumbotron">
         <h2><%= project.name %></h2>
       </div>
       <div>
         <p class="projet">
-          <a href="<%= project.githuburl %>" ><%= project.githubrepo %></a>
+          <a href="<%= project.githuburl %>">
+            <%= project.githubrepo %>
+          </a>
         </p>
-
-        <form  action="/users/<%= id %>/projects/<%= idProject %>" method="post" onsubmit="return confirm('Êtes-vous sur de vouloir supprimer ce projet?')">
-        <button type="submit" class="btn btn-danger btn-lg btn-width">
-          supprimer le projet
-        </button>
-        </form>
-
+        <p>
+          <%= project.description %>
+        </p>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer>
-      <% include ../partials/footer %>
-    </footer>
-  </body>
+  <footer>
+    <% include ../partials/footer %>
+  </footer>
+</body>
+
 </html>
