correction mineures (orthographe)

--- a/views/projectsPages/deleted.ejs
+++ b/views/projectsPages/deleted.ejs
@@ -11,7 +11,7 @@
     <section class="container" style="text-align:center">
       <div class="jumbotron">
         <p>Le projet a bien été supprimé</p>
-        <a href="/users/<%= id %>/projects"><p>Retourner sur la lsite des  projets</p></a>
+        <a href="/users/<%= id %>/projects"><p>Retourner sur la liste des  projets</p></a>
       </div>
     </section>
 
