--- a/views/usersPages/user.ejs
+++ b/views/usersPages/user.ejs
@@ -47,10 +47,10 @@
 
       <div class="row">
         <div class="col-xs-offset-1 col-xs-10 col-lg-offset-3 col-lg-6">
-          <img class="img-profil img-responsive" src="<%= apprenant[0].img %>" alt="img-profil">
+          <img style="width:100%" class="img-profil img-responsive" src="<%= apprenant[0].img %>" alt="img-profil">
         </div>
       </div>
-      <p style="margin-bottom: 150px"> <a href="<%= apprenant[0].id %>/projects" />Voir ces projets</a>
+      <p style="margin-bottom: 150px"> <a href="<%= apprenant[0].id %>/projects" />Voir ses projets</a>
       </p>
     </div>
     </div>
